--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -339,7 +339,7 @@
             alt=""
           />
         </div>
-        <h3 class="text-center mt-3 text-sp-red" style="font-family: Analogue;font-style: normal;font-weight: normal;">Instagram <a class="text-sp-red" href="https://instagram.com/panayasarees/">@apanayasarees</a></h3>
+        <h3 class="text-center mt-3 text-sp-red" style="font-family: Analogue;font-style: normal;font-weight: normal;">Instagram <a class="text-sp-red" href="https://instagram.com/panayasarees/">@panayasarees</a></h3>
         <div class="container">
           <div class="mt-5">
             <div class="owl-carousel owl-theme" id="instafeed">
