--- a/user_manager/templates/user_manager/profile_add_address.html
+++ b/user_manager/templates/user_manager/profile_add_address.html
@@ -36,6 +36,9 @@ Add Address
             <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Enter your Postal Code" required>
         </div>
         <div class="form-group">
+            <input type="text" class='entry' name="state" id="state" class="form-control" placeholder="Enter your State" required>
+        </div>
+        <div class="form-group">
             
             <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="Enter your Country" required>
         </div>
