--- a/user_manager/templates/user_manager/profile_address.html
+++ b/user_manager/templates/user_manager/profile_address.html
@@ -54,7 +54,7 @@
                             <p class='user-name-in-address'>{{ address.first_name }} {{ address.last_name }}<p>
                             <p>{{ address.address }}</p>
                             <p>{{ address.city }}, {{ address.postal_code }}</p>
-                            <p>{{ address.country }}</p>
+                            <p>{{ address.state }}, {{ address.country }}</p>
                         </div>
                         <div class='edit-button-wrapper'>
                             <form method="post">
