--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -11,6 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'pages_static/css/styles.css' %}">
+    <style>
+        .section-heading img {
+            width: 200px;
+        }
+    </style>
     {% block css %}{% endblock css %}
 </head>
 
@@ -93,16 +98,11 @@
         </nav>
     </header>
     <main id="main-container">
-        <div id="say_thank" style="display : none ;position: fixed; z-index: 999; background: #ffce76; width: 80%; text-align: center; margin-left: 10%;; align-items: center; top: 5%; height: 90%;">
-            <div class="cross" onclick="closeThanks()" style="transform: rotate(45deg); margin-top : 0% !important ; color: #8d0020;">+</div>
-            <div class="container row mt-5 mb-5">
-                <div class="col-6">
-                    <img src="{% static 'pages_static/images/about/oct7753.svg' %}" alt="" class="img-fluid thanks_img" style="height : 80vh">
-                </div>
-                <div class="col-6 d-flex align-items-center">  
-                    <h1 class="text-danger thanks_text">THANKS FOR SHOWING INTEREST IN US</h1>
-                </div>
-            </div>
+        <div id="say_thank" style="display: none ;position: fixed; z-index: 999; background: #ffce76; width: 80%; text-align: center; margin-left: 10%;; align-items: center; top: 5%; ">
+        <div style="position:absolute; width: 100%;">
+             <div class="cross" onclick="closeThanks()" style="transform: rotate(45deg); margin-top : 0% !important ; color: #8d0020;">+</div>
+        </div>
+        <img class="img-fluid" src="{%static 'pages_static/images/index/email_thanks.svg' %}" alt="">
         </div>
         {% block body %}
         {% endblock body %}
