--- a/product/static/products/css/product.scss
+++ b/product/static/products/css/product.scss
@@ -221,30 +221,30 @@ a {
   text-align: center;
 }
 
-#active-product-img,
-#select-img-container {
-  height: 520px;
-}
+// #active-product-img,
+// #select-img-container {
+//   height: 520px;
+// }
 
-@media (max-width: 768px) {
-  #active-product-img,
-  #select-img-container {
-    height: 250px;
-  }
-}
+// @media (max-width: 768px) {
+//   #active-product-img,
+//   #select-img-container {
+//     height: 250px;
+//   }
+// }
 
-@media (min-width: 768px) and (max-width: 991.98px) {
-  #active-product-img,
-  #select-img-container {
-    height: 320px;
-  }
-}
+// @media (min-width: 768px) and (max-width: 991.98px) {
+//   #active-product-img,
+//   #select-img-container {
+//     height: 320px;
+//   }
+// }
 
-@media (min-width: 768px) and (max-width: 1199.98px) {
-  #active-product-img,
-  #select-img-container {
-    height: 450px;
-  }
-}
+// @media (min-width: 768px) and (max-width: 1199.98px) {
+//   #active-product-img,
+//   #select-img-container {
+//     height: 450px;
+//   }
+// }
 
 /*# sourceMappingURL=shop.css.map */
