--- a/pages_static/templates/pages_static/contactUs.html
+++ b/pages_static/templates/pages_static/contactUs.html
@@ -56,24 +56,24 @@ Contact Us
                         </div>
                 </form>
             </div>
-            <div  id="map" class="col-sm-6"></div>
+            <div  id="map" class="col-sm-6"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14423.482610620262!2d82.98347677304673!3d25.34212108412538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398e2dd81c35bde9%3A0x9773c11a75fdfe77!2sKhajuri%20Colony%2C%20Varanasi%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1641985228278!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
         </div>
     </div>
     <div class="row mt-5">
         <div class="col-sm-4 text-center">
             <div><img class="service_img" src="{% static 'call.svg' %}" alt=""></div>
             <div class="service_text">Let’s have a chat </div>
-            <div class="service_details">097398 38004</div>
+            <div class="service_details">+91 93369 40122</div>
         </div>
         <div class="col-sm-4 text-center">
             <div><img class="service_img" src="{% static 'location.svg' %}" alt=""></div>
             <div class="service_text">Visit Our Store </div>
-            <div style="font-size: 20px;">S 10/252 ,”Sunder Villa”,M A Road ,Chowkaghat ,Varanasi,Orissa,India 221002</div>
+            <div style="font-size: 20px;">S 10/252 ,”Sunder Villa”,M A Road ,Chowkaghat ,Varanasi,Uttar Pradesh,India 221002</div>
         </div>
         <div class="col-sm-4 text-center">
             <div><img class="service_img" src="{% static 'mail.svg' %}" alt=""></div>
             <div class="service_text">Email Us</div>
-            <div class="service_details">panaya@gmail.com</div>
+            <div class="service_details">support@panaya.in</div>
         </div>
     </div>
     <div class="container mt-5 mb-5">
