--- a/pages_static/static/pages_static/css/policies.css
+++ b/pages_static/static/pages_static/css/policies.css
@@ -18,10 +18,10 @@
   padding: 0;
 }
 body {
-  text-align: justify;
-  background: url("/static/pages_static/images/policies/back_img.png");
-  background-color: rgba(255, 239, 209, 0.77);
+  text-align: left ;
+  background: url("/static/pages_static/images/index/explore-banaras-bg.png");
   font-family: sans-serif, "Poppins";
+  background-size: contain;
 }
 .header,
 .footer {
