--- a/pages_static/templates/pages_static/about.html
+++ b/pages_static/templates/pages_static/about.html
@@ -11,23 +11,26 @@
 <div id='story'>
     <section class='section-1-3'>
         <div id='story-header'>
-            <h2>OUR STORY</h2>
+            <h2 style="font-family: Analogue;">OUR STORY</h2>
         </div>
         <div class='container' id='about-us'>
             <div class='row justify-content-md-center'>
                 <div class='col-lg-6'>
                     <div class='align-center1'>
-                        <h2>About us</h2>
+                        <h2 style="font-family: Analogue;">About us</h2>
                     </div>
                     <div class='text'>
-                        <p>
-                            Panaya, formerly known as Oriental textile, is an elite name in the world of Banarasi Sarees.
-                            It is located in Varanasi and Banglore. The Heritage of Indian Culture has been well-preserved and displayed at Panaya.
-                            The piousness attached to the 'historic' Banarasi Saree has been kept intact at Panaya. The name has been shining not just in India, but all over the world.
-                            The royal range of Banarasi Sarees at Panaya have conquered many hearts, not only Indian but across the world. People from various parts of the world have been captivated by this
-                            piece of Indian art and culture. The six-yards of royal ethnic piece, has left impressed even Her Majesty the Queen of the England. She herself visited us
-                             to buy textiles! Even the famous pop singer Goldie Hawn chose our Banarasi Saree for Michael Douglas in the New York City! The handwork done on the purest form of Banarasi silk
-                             by our artists has kept all our customers across the globe on their toes.
+                        <p style="font-family: Alegreya;">
+With our timeless and splendid sarees handcrafted by the skilled artisans of the city of Banaras, Panaya, formerly known as Oriental textile, is an aristocratic and elite name in the world of Banarasi sarees. 
+Originating from the holy city of Beneras, the rich cultural heritage of India and the piousness of the Benarasi sarees has been well preserved by Panaya through it's beautiful sarees. 
+Panaya has a history as rich and phenomenal as it's sarees, and although the brand was originally encompassed only within the holy city, it had been capturing hearts with its exquisite designs all over the world. 
+The royal collection of the Benarasi sarees from Panaya has made their way into the hearts of people with taste and an eye for beauty worldwide. 
+The six-yards of royal ethnic piece, has left impressed even Her Majesty the Queen of England. 
+It was one of the greatest moments of honour for Panaya when the Queen herself visited us and appreciated our sarees. 
+Adding another feather to our cap, the famous pop singer Goldie Hawn chose our Banarasi Saree for Michael Douglas in New York City, which was truly a cherished moment for Panaya. 
+Our sarees have also found their way in the wardrobe of the former First Lady of the United States Jacqueline Lee Kennedy Onassis, among the prominent names in royalty across the Indian subcontinent. 
+Priceless moments like this motivate us to work even harder to keep the legacy of Panaya shining across continents, being a contemporary heirloom for today's connoisseurs. 
+Venturing beyond its city, the brand is now all set to showcase its finery and traditional artistry at a three day pop up at Chennai's Silkworm Boutique. 
                         </p>
                     </div>
                 </div>
@@ -66,8 +69,9 @@
                 </div>
                 <div class='text'>
                     <p>
-                        Banarasi Silk (also known as Benarasi Silk) is a fine variant of Silk originating from the city of Varanasi in Uttar Pradesh, India.
-                        Saree woven from this fine silk, known as a Banarasi Silk Sarees extremely popular all over India and across the world.
+                        Wearing a Banarasi saree evokes a deep sense of age-old connection with one's grandmother, mother, aunt and every other woman who understands and signifies the spirit of Banaras-simplicity, faith and elegance. 
+Wearing a saree from Panaya is an immersion into the slow luxury of the finest artisan hand woven textile from Banaras. 
+
                     </p>
                 </div>
                 <div>
@@ -75,9 +79,13 @@
                 </div>
                 <div class='text'>
                     <p>
-                        The art and culture of providing Banarasi sarees with silks is very ancient. The continuations of passing down the culture of
-                        artistry of the Banarasi sarees from one generation to another have never stopped. Persian motifs were being mixed up with the design of Indian silk
-                        for creating this distinctive flowery pattern of Banarasi silk sarees, which are so typical in present days.
+Preserving the highest level of traditional artistry and handicrafts of Banaras, while also never losing the modern touch, is the vision of Panaya. 
+At Panaya, you can get both classically traditional sarees as well as sarees with a modern twist, and a mix of both. But whatever you pick is, the essence remains steady- radiance, simplicity and rich cultural heritage. 
+Each of our saree is handwoven over several months, benchmarking excellence in 
+quality of materials and designs, which attempt to match historical masterpieces. 
+These sarees are also easy to wear and very comfortable, making you feel completely at home when you drape it, bringing out the radiant charm in every woman. 
+Each saree has a story to tell, as each Panaya product has been made by careful detailing by the hands of a trained, dedicated artisan with skills which are passed down through generations and generations beyond generations. 
+Let's restore the timeless bond with these sarees from the timeless collection of Banarasi sarees from Panaya. 
                     </p>
                 </div>
                <div class='row'>
@@ -92,17 +100,17 @@
         <div class='container'>
             <div>
                 <div class='align-center1'>
-                    <h1>How do we make Banarasi Sarees for you?</h1>
+                    <h1 style="font-family: Analogue;">How do we make Banarasi Sarees for you?</h1>
                 </div>
                 <div class='text'>
-                    <p>
-                        The rich and royal range of Banarasi Sarees produced at Panaya. The edication and perfection poured into the making of
-                        this classic historic element is unparalleled. The charisma and the royalty that the sarees is unmatched by anything else.
+                    <p style="font-family: Alegreya;">
+                        The rich and royal collection of Banarasi Sarees produced by Panaya by the traditional weavers of Uttar Pradesh, with skills that can only be developed over several decades. 
+The dedication and perfection poured into the making of this classic historic element is unparalleled, making the charisma and the royalty that the sarees have is unmatched by anything else.
                     </p>
                 </div>
                 <div>
                     <div class='align-center1'>
-                        <h2>Waving Process</h2>
+                        <h2>Weaving Process</h2>
                     </div>
                     <div class='row'>
                         <div class='col-md-4'>
@@ -132,7 +140,7 @@
     <section class='section-2-4' id='section-4'>
         <div class='container'>
             <div class='col-12' id='man-image'>
-                <img class='boat-image'src="{% static 'pages_static/images/about/A.png'%}" alt="">
+                <img class='boat-image' style="aspect-ratio: 16/9;" src="{% static 'pages_static/images/about/A.png'%}" alt="">
             </div>
             <div>
                 <div id='wrapper-image'>
